# RNA_Operacional_WRF

./:  schemePMN.drawio  API.py  API_output.ipynb  API_output_treatment.py  Dockerfile  README.md  RNA.ipynb  RNA_Setups.txt  WRF_Operacional_RNA (1).drawio  WRF_Operacional_RNA.drawio  WRF_output_treatment.py  WUPpiratining.csv  chuva.csv  concat.ipynb  corrected_wrf  dashboard.py  data_merge.py  final_data.csv  final_data_after.csv  neural0.ipynb  observed_data_query.py  onWindows_requirements.txt  pyproject.toml  requirements.txt  rna_input.csv  rna_requirements.yml  run_API.py  setup_reading_function.py  tempo.csv  tests_WRF_output_treatment.py  utilities.py
.ipynb_checkpoints/: API_output_treatment-checkpoint.py
OBS/: API.py  API_output_treatment - Copia.py  API_output_treatment.py  __init__.py  data_download.sh  observed_data_query.py  observed_data_treatment.py
WRF/: WRF_output_treatment.py
dashboard/: dashboard.py
drawio/:  schemePMN.drawio
files/: .extrai_rn.zip.icloud  .series_Barreto 1_18-21.csv.icloud  11_barreto.csv  12_barreto.csv  18_rain.csv  21_rain.csv  Barreto 1.csv  barreto_18-21.csv  barreto_18-21.csv_Zone.Identifier  chuva.csv  extrai_rn.zip:Zone.Identifier  full_series_Barreto_18-21.csv  series_Barreto 1_21.xlsx  tempo.csv
sistema/: sistema.sh
src/: Jurujuba_pre_process.csv  RNA_Setups.txt  data_merge.py  model_run.py  setup_reading_function.py  train_set_generator.py  utilities.py
studies/: 0testing_rain.csv  13testing_rain.csv  API_output.ipynb  API_treat_example.ipynb  RNA.ipynb  Untitled.ipynb  chuva.csv  concat.ipynb  (+7 more)
(+362 files in other folders)
